[package]
name = "rodeo"
version = "1.0.0"
authors = ["Ronan Kelley <Ronan-Kelley@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.6"
